cluster/silverbullet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: silverbullet
spec:
  selector:
    app: silverbullet
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
