cluster/silverbullet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: silverbullet
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
        - notes.churrer.xyz
      secretName: silverbullet-tls
  rules:
    - host: "notes.churrer.xyz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: silverbullet
                port:
                  number: 3000
